Update docker-compose.yml to remove version specification, adjust network settings, and add NODE_ENV variable for production environment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   chatengine:
     build: .
@@ -11,18 +9,23 @@ services:
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
       SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+
       EVOLUTION_API_URL: ${EVOLUTION_API_URL}
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
       EVOLUTION_WEBHOOK_SECRET: ${EVOLUTION_WEBHOOK_SECRET}
+
       CHATENGINE_JWT_SECRET: ${CHATENGINE_JWT_SECRET}
       OUTBOX_WORKER_TOKEN: ${OUTBOX_WORKER_TOKEN}
+
       SUPABASE_MEDIA_BUCKET: ${SUPABASE_MEDIA_BUCKET}
       SUPABASE_MEDIA_URL_EXPIRES_IN: ${SUPABASE_MEDIA_URL_EXPIRES_IN}
+
+      NODE_ENV: production
     networks:
-      - shared
+      - evolution_default
 
   chatengine-worker:
-    image: chatengine
+    build: .
     container_name: chatengine-worker
     restart: unless-stopped
     command:
@@ -41,8 +44,8 @@ services:
     depends_on:
       - chatengine
     networks:
-      - shared
+      - evolution_default
 
 networks:
-  shared:
+  evolution_default:
     external: true
