--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ EVOLUTION_API_KEY=ev0luti0n_API_9fA3X!
 EVOLUTION_WEBHOOK_SECRET=evolution_webhook_secret_123
 CHATENGINE_JWT_SECRET=chatengine_jwt_secret_789
 OUTBOX_WORKER_TOKEN=outbox_worker_token_abc
+CORS_ALLOWED_ORIGINS=https://crm.newflow.me
