--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
       EVOLUTION_WEBHOOK_SECRET: ${EVOLUTION_WEBHOOK_SECRET}
 
+      EVOLUTION_WEBHOOK_TOKENS: ${EVOLUTION_WEBHOOK_TOKENS}
+      EVOLUTION_INSTANCE_WORKSPACE_MAP: ${EVOLUTION_INSTANCE_WORKSPACE_MAP}
+
       CHATENGINE_JWT_SECRET: ${CHATENGINE_JWT_SECRET}
       OUTBOX_WORKER_TOKEN: ${OUTBOX_WORKER_TOKEN}
 
