--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ EVOLUTION_WEBHOOK_SECRET=evolution_webhook_secret_123
 CHATENGINE_JWT_SECRET=chatengine_jwt_secret_789
 OUTBOX_WORKER_TOKEN=outbox_worker_token_abc
 CORS_ALLOWED_ORIGINS=https://crm.newflow.me
+EVOLUTION_WEBHOOK_TOKENS={"evolution_webhook_secret_123":"1ae47bc7-e338-4496-910f-f862ea9eeb4f"}
+EVOLUTION_INSTANCE_WORKSPACE_MAP={"ws_1ae47bc7e3_2c6935d2":"1ae47bc7-e338-4496-910f-f862ea9eeb4f"}
