--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,7 @@ services:
 
       EVOLUTION_API_URL: ${EVOLUTION_API_URL}
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
-      EVOLUTION_WEBHOOK_SECRET: ${EVOLUTION_WEBHOOK_SECRET}
-
-      EVOLUTION_WEBHOOK_TOKENS: ${EVOLUTION_WEBHOOK_TOKENS}
-      EVOLUTION_INSTANCE_WORKSPACE_MAP: ${EVOLUTION_INSTANCE_WORKSPACE_MAP}
+      EVOLUTION_WEBHOOK_SECRET: ${EVOLUTION_WEBHOOK_SECRET}}
 
       CHATENGINE_JWT_SECRET: ${CHATENGINE_JWT_SECRET}
       OUTBOX_WORKER_TOKEN: ${OUTBOX_WORKER_TOKEN}
@@ -29,6 +26,7 @@ services:
     networks:
       - evolution_default
       - nginx-proxy-manager_default
+      - crmnet
 
   chatengine-worker:
     image: ghcr.io/cesarcabe/chatengine:latest
@@ -58,3 +56,7 @@ networks:
 
   nginx-proxy-manager_default:
     external: true
+
+  crmnet:
+    name: crmnet
+    driver: bridge
